Handle repeated headers when more than one table in paged context

BUG=631222

Review-Url: https://codereview.chromium.org/2212033002
Cr-Commit-Position: refs/heads/master@{#410657}

Former-commit-id: f4f9dd5f2a9339d1b66a226580102d0bee4e4d38